Adjust agreement width on mobile and ensure it can be scrolled horizontally if needed.

--- a/sandstone/static/css/sandstone/sandstone-resp.less
+++ b/sandstone/static/css/sandstone/sandstone-resp.less
@@ -1480,6 +1480,8 @@ nav.menu-bar {
     }
     #download-agreement {
         font-size: 12px;
+        overflow-x: scroll;
+        width: 85%;
     }
     #agreement-form {
         .form-actions .button {
